Bug 147874 - HANG: switching to another sheet
Summary: HANG: switching to another sheet
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
5.2 all versions
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 inReleaseNotes:25.8
Keywords: perf, wantBacktrace
Depends on:
Blocks: Performance
  Show dependency treegraph
 
Reported: 2022-03-09 14:27 UTC by Xisco Faulí
Modified: 2025-08-30 15:37 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Flamegraph (102.12 KB, application/x-bzip)
2022-03-09 18:57 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-03-09 14:27:21 UTC
Steps to reproduce:
1. Open attachment 49939 [details] from bug 39847
2. Switch to table 'aaa'

-> LibreOffice hangs

Reproduced in

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: b461ada70158de5cd2e96a54147c8e46ee1ca4ac
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

and

Version: 5.2.1.2
Build ID: 31dd62db80d4e60af04904455ec9c9219178d620
CPU Threads: 8; OS Version: Linux 5.10; UI Render: default; 
Locale: en-US (es_ES.UTF-8); Calc: group
Comment 1 Xisco Faulí 2022-03-09 14:28:01 UTC
@Julien, would it be possible to have a perf graph for this issue ?
Comment 2 Julien Nabet 2022-03-09 18:57:52 UTC
Created attachment 178762 [details]
Flamegraph

Here's a Flamegraph retrieved on pc Debian x86-64 with master sources updated today (f56b932487509de1ecde46a42c40df76c6ecebcf) + gen rendering.
Comment 3 Julien Nabet 2022-03-09 18:58:38 UTC
Let's put this one to NEW since there's indeed an hang.
Comment 4 QA Administrators 2024-12-29 03:13:57 UTC Comment hidden (obsolete)
Comment 5 Charles Williams 2024-12-29 22:14:54 UTC
Bug present in

Version: 24.8.4.2 (AARCH64) / LibreOffice Community
Build ID: bb3cfa12c7b1bf994ecc5649a80400d06cd71002
CPU threads: 8; OS: macOS 15.2; UI render: Skia/Raster; VCL: osx
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded


I find that switching to sheet 'aaa' for the first time takes up to 30 seconds on a MacBook Air with an M2 processor, which seems way too long to draw a relatively simple graph. After the first time, switching back and forth between sheets happens instantly.
Comment 6 Buovjaga 2025-03-17 09:56:15 UTC
Xisco: it seems there is an improvement, for me it takes 11 seconds. So maybe we should at least adjust the summary?

Arch Linux 64-bit
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 493e37d16ce673560ab4309f91308cd5a99944d1
CPU threads: 8; OS: Linux 6.13; UI render: default; VCL: gtk3
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 17 March 2025
Comment 7 Commit Notification 2025-04-04 15:49:41 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8611749d0acbf910a7003131e4419022eb4fe4bc

tdf#147874 slow sheet switching with large chart2

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-04-04 15:49:43 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/eeb8ca44ac7994c0552749e190a193a44c956769

tdf#147874 slow sheet switching with large chart2 (2)

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-04-04 17:22:54 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/083556bd17713bbbb1e7569b738c87dc3e93edf9

reduce object creation in SvNumberFormatsSupplierObj (tdf#147874 related)

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2025-04-04 19:38:27 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f405c6a670a4272581095b4aa75bb0ca8c6daf63

Revert "reduce object creation in SvNumberFormatsSupplierObj (tdf#147874 related)"

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2025-04-05 11:38:53 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4e559c3b2b4ca1fd2ba8c8ee5a7a5ac8a88893cf

tdf#147874 slow sheet switching with large chart2 (3)

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Buovjaga 2025-04-12 17:11:16 UTC
Now the first switching is only a couple of secs, nice!

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: fe4142000435f2e4c5b8ae77f44c495cb0ae3e47
CPU threads: 4; OS: Linux 6.13; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded