tdf#147874 slow sheet switching with large chart2

split out the initialisation and exit early if possible. Takes the
switching time from 11sec to 2sec for me.

Change-Id: If31962e9603a14271a638da19a26ea1b050967d2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183699
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins